// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders correctly with dark mode 1`] = `
<span
  class="sc-beyTiQ bvceMp"
/>
`;

exports[`Loading renders correctly with light mode 1`] = `
<span
  class="sc-beyTiQ ihEZjn"
/>
`;
